overlays/prod/usertestsys-md/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myroute-usertestsys-md
  namespace: servdoc
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.0.113`) && PathPrefix(`/mo/test/doc`)
      kind: Rule
      services:
        - name: doc-usertestsys-md
          port: 4000
      middlewares:
        - name: strip3prefixregex
